Spelling mistakes changed

--- a/index.html
+++ b/index.html
@@ -241,19 +241,19 @@ License: Creative Commons Attribution 3.0 Unported
 										<p>learned by self through opern source Education.</p>
 									</div>
 									<div class="col-lg-6 inner-w3pvt-wrap">
-										<h4>Diploma in elestronics engneering</h4>
+										<h4>Diploma in electronics engneering</h4>
 										<h6>-Govt.polytechnic college Meppadi- </h6>
 										<p>not completed.</p>
 									</div>
 									<div class="col-lg-6 inner-w3pvt-wrap">
 										<h4>higher secondery</h4>
 										<h6>-Govt.Higher secondery school panamkandy- 2018</h6>
-										<p>completed in elestronics science</p>
+										<p>completed in electronics science</p>
 									</div>
 									<div class="col-lg-6 inner-w3pvt-wrap">
 										<h4>T H S L C </h4>
 										<h6>-Govt.Technical high school mananthavady- 2016</h6>
-										<p>completed THSLC in elestronics and green house Technologies.</p>
+										<p>completed THSLC in electronics and green house Technologies.</p>
 									</div>
 								</div>
 							</section>
