--- a/index.html
+++ b/index.html
@@ -23,11 +23,7 @@ License: Creative Commons Attribution 3.0 Unported
 	</script>
 	<!-- //Meta tag Keywords -->
 	
-	
-	
 	<!-- Web-Fonts -->
-	<link href="//fonts.googleapis.com/css?family=Libre+Franklin:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet">
-	
 	<link rel="short icon" href="Instagram/3ccab225-5d65-43ec-96c2-4d13c21cdb1c.jpg">
 	<!-- //Web-Fonts -->
 	
@@ -110,7 +106,7 @@ License: Creative Commons Attribution 3.0 Unported
 									<h2 class="heading text-capitalize mb-4">About Me <span></span></h2>
 									<h4>I'm a frontend web Developer </h4>
 									<p class="mb-4">I am a novice with full of enthusiasm to acquire more skills.<br>I am doing
-									 static web designing and developing as freelance. I can assure that i can compleet your work on time with my best</p>
+									 static web designing and developing as freelance. I can assure that i can complete your work on time with my best</p>
 									
 									<a href="#contact" class="banner-button2 btn">Hire Me</a>
 								</div>
@@ -314,8 +310,7 @@ License: Creative Commons Attribution 3.0 Unported
 		</div>
 	</footer>
 	</div>
-	<!-- //footer -->
-	
+	<!-- //footer -->	
 	<!-- move top -->
 	<div class="move-top text-right">
 		<a href="#home" class="move-top"> 
@@ -323,16 +318,12 @@ License: Creative Commons Attribution 3.0 Unported
 		</a>
 	</div>
 	<!-- move top -->
-
-</div>	
-	
+</div>		
 <!-- Custom-Files -->
 	<link rel="stylesheet" href="css/bootstrap.css"><!-- Bootstrap-Core-CSS -->
 	<link rel="stylesheet" href="css/style.css" type="text/css" media="all" /><!-- Style-CSS -->
 	<link rel="stylesheet" href="css/font-awesome.min.css"><!-- Font-Awesome-Icons-CSS -->
-	<!-- //Custom-Files -->
+<!-- //Custom-Files -->
+        <link href="//fonts.googleapis.com/css?family=Libre+Franklin:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet">
 </body>
-
-
-
 </html>
