--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@ License: Creative Commons Attribution 3.0 Unported
 					<ul>
 						<li class="mr-sm-3 mr-2 icons"><a href="https://www.facebook.com/pranav.pps.9/"><span class="fa fa-facebook" aria-hidden="true"></span></a></li>
 						<li class="mr-sm-3 mr-2 icons"><a href="https://www.instagram.com/lu_ci_d__dreamer/"><span class="fa fa-instagram" aria-hidden="true"></span></a></li>
-						<li class="mr-sm-3 mr-2 icons"><a href="https://mail.google.com/mail/u/0/#inbox?compose=DmwnWrRnZFNwbWqgXbBPZDbQmnsqbXnTDwgqCHxsDmdBzhFHdcqxDBQTsWBQCbcrHwKFTgqWmZBG"><span class="fa fa-envelope" aria-hidden="true"></span></a></li>
+						<li class="mr-sm-3 mr-2 icons"><a href="pranavpps406@gmail.com"><span class="fa fa-envelope" aria-hidden="true"></span></a></li>
 						
 					</ul>
 				</div>
@@ -258,37 +258,8 @@ License: Creative Commons Attribution 3.0 Unported
 		<!-- //main -->
 		
 		<!-- contact -->
-		<section class="contact" id="contact">
-			<div class="inner-sec">
-				<h3 class="heading text-capitalize mb-4">Get In Touch <span></span></h3>
-				<form name="contact-form" class="contact-form"   method="post"  id="form">
-					<div class="row">
-						<div class="col-md-6 con-gd">
-							<div class="form-group">
-								<p>Name *</p>
-								<input type="text" class="form-control" id="name" placeholder="Enter Your Name" name="name" required="yes">
-							</div>
-							<div class="form-group">
-								<p>Email *</p>
-								<input type="email" class="form-control" id="email" placeholder="Enter Your Email Id" name="email" required="yes">
-							</div>
-
-						</div>
-						<div class="col-md-6 con-gd">
-							<div class="form-group">
-								<p>Send a Message *</p>
-								<textarea name="Message" class="form-control" placeholder="Enter Your Message" required="yes"></textarea>
-							</div>
-
-						</div>
-					</div>
-					<div class="form-group mb-0">
-						<button type="submit" name="submit" class="btn btn-default" > Submit</button>
-					</div>
-				</form>
-			</div>
 		
-		</section>
+		<h3>Phone:9544678456</h3>
 		<!-- contact -->
 	</div>
 	<!-- //container -->
