--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@ License: Creative Commons Attribution 3.0 Unported
 					<ul>
 						<li class="mr-sm-3 mr-2 icons"><a href="https://www.facebook.com/pranav.pps.9/"><span class="fa fa-facebook" aria-hidden="true"></span></a></li>
 						<li class="mr-sm-3 mr-2 icons"><a href="https://www.instagram.com/lu_ci_d__dreamer/"><span class="fa fa-instagram" aria-hidden="true"></span></a></li>
-						<li class="mr-sm-3 mr-2 icons"><a href="pranavpps406@gmail.com"><span class="fa fa-envelope" aria-hidden="true"></span></a></li>
+						<li class="mr-sm-3 mr-2 icons"><a href="https://github.com/Pranav406"><span class="fa fa-github" aria-hidden="true"></span></a></li>
 						
 					</ul>
 				</div>
@@ -145,6 +145,24 @@ License: Creative Commons Attribution 3.0 Unported
 									<p class="card-text">the site will visble to all the devices with its on specification.</p>
 								</div>
 							</div>
+						</div>
+						<div class="col-lg-4 col-md-6 service-in text-center mt-lg-0 mt-4">
+							<div class="card">
+								<div class="card-body">
+									<span class="fa fa-pencil-square-o mb-4"></span> 
+									<h5 class="card-title text-uppercase">Graphic designing</h5>
+									<p class="card-text">i can do your graphic designing using photoshop and coral draw.</p>
+								</div>
+							</div>
+						</div>
+						<div class="col-lg-4 col-md-6 service-in text-center">
+							<div class="card">
+								<div class="card-body">
+									<span class="fa fa-desktop mb-4"></span>
+									<h5 class="card-title text-uppercase">Photo editing</h5>
+									<p class="card-text">I can make your images wounderfull with photoshop.</p>
+								</div>
+							</div>
 						</div>						
 					</div>
 				</div>
@@ -164,6 +182,10 @@ License: Creative Commons Attribution 3.0 Unported
 								<h5>Responsive Design - 85%</h5>
 								<p class="mb-4 bg clr-eighty-five"></p>
 								<h5>WEB DESINING - 70%</h5>
+								<p class="mb-4 bg clr-seventy"></p>
+								<h5>Photoshop - 85%</h5>
+								<p class="mb-4 bg clr-eighty-five"></p>
+								<h5>CorelDRAW - 70%</h5>
 								<p class="mb-4 bg clr-seventy"></p>
 							</div>
 						</div>
@@ -226,6 +248,12 @@ License: Creative Commons Attribution 3.0 Unported
 										<p>Learned by self through opern source Education.</p>
 									</div>
 									<div class="col-lg-6 inner-w3pvt-wrap">
+										<h4>Graphic Designing</h4>
+										<h6>-self learnd- 2020</h6>
+										<p>Learned by self through opern source Education
+											Adobe photoshop & corel draw.</p>
+									</div>
+									<div class="col-lg-6 inner-w3pvt-wrap">
 										<h4>Diploma in electronics engneering</h4>
 										<h6>-Govt.polytechnic college Meppadi- </h6>
 										<p>Not completed yet.</p>
@@ -258,8 +286,23 @@ License: Creative Commons Attribution 3.0 Unported
 		<!-- //main -->
 		
 		<!-- contact -->
+		<section class="contact" id="contact">
+			<div class="inner-sec">
+				<h3 class="heading text-capitalize mb-4">Get In Touch <span></span></h3>
+				<form name="contact-form" class="contact-form" action="mail3.php"  method="post"  id="form">
+					<div class="row">
+						<div class="col-md-6 con-gd" style="color: aliceblue;">
+							<ul>
+							<li>Phone:9544678456</li>
+							<li>Email:pranavps8456@gmail.com</li>
+						</ul>
+					</div>
+					</div>
+					
+				</form>
+			</div>
 		
-		<h3>Phone:9544678456</h3>
+		</section>
 		<!-- contact -->
 	</div>
 	<!-- //container -->
