--- a/index.html
+++ b/index.html
@@ -293,8 +293,9 @@ License: Creative Commons Attribution 3.0 Unported
 					<div class="row">
 						<div class="col-md-6 con-gd" style="color: aliceblue;">
 							<ul>
-							<li>Phone:9544678456</li>
-							<li>Email:pranavps8456@gmail.com</li>
+							<li><i class="fa fa-mobile" aria-hidden="true"></i>  9544678456</li>
+							<li><i class="fa fa-envelope" aria-hidden="true"></i>
+								  pranavps8456@gmail.com</li>
 						</ul>
 					</div>
 					</div>
